--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,17 @@ body {
     background: #000;
 }
 
+h1 {
+    color: #fff;
+    text-align: center;
+    font-family: Garamond, 'Times New Roman', Times, serif;
+    font-size: 30px;
+}
+
 #window {
     position: relative;
     width: 1000px;
-    height: 600px;
+    height: 562px;
     border: 5px solid #fff;
     margin: 0 auto;
     padding: 0;
